# data-science-project-with-deployment

./: .gitignore  app.py  main.py  params.yaml  pyproject.toml  requirements.txt  template.py
config/: config.yaml
research/: 1_data_ingestion.ipynb  2_data_validation.ipynb  3_data_transformation.ipynb  4_model_trainer.ipynb  5_model_evaluation.ipynb  research.ipynb
src/data_science/: __init__.py
src/data_science/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/data_science/config/: configuration.py
src/data_science/entity/: config_entity.py
src/data_science/pipeline/: data_ingestion_pipeline.py  data_transformation_pipeline.py  data_validation_pipeline.py  model_evaluation_pipeline.py  model_trainer_pipeline.py
src/data_science/utils/: common.py
